syntax = "proto3";

package github.com.patricksferraz.accountingServices;

option go_package = "/protofiles;pb";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

message FindEmployeeClaimsByTokenRequest {
    string accessToken = 1;
}

message JWTInfo {
    string accessToken = 1;
    string idToken = 2;
    int64 expiresIn = 3;
    int64 refreshExpiresIn = 4;
    string refreshToken = 5;
    string tokenType = 6;
    int64 notBeforePolicy = 7;
    string sessionState = 8;
    string scope = 9;
}

message EmployeeClaimsInfo {
    string id = 1;
    repeated string roles = 2;
}

service AuthService {
    rpc Login (LoginRequest) returns (JWTInfo);
    rpc RefreshToken (RefreshTokenRequest) returns (JWTInfo);
    rpc FindEmployeeClaimsByToken (FindEmployeeClaimsByTokenRequest) returns (EmployeeClaimsInfo);
}
